==> Chace0219/nRF5SDK-SPI_I2C/SSD_LSMSPI/LSM9D/SparkFunLSM9DS1.c <==
#include "nrf_gpio.h"
#include "SparkFunLSM9DS1.h"
#include "LSM9DS1_Registers.h"
#include "LSM9DS1_Types.h"
#include <Wire.h> // Wire library is used for I2C
#include <SPI.h>  // SPI library is used for...SPI.
  #include "Arduino.h"
  #include "WProgram.h"
#define LSM9DS1_COMMUNICATION_TIMEOUT 1000

void initSPI()
{
	nrf_gpio_cfg_output(_xgAddress); //pinMode(_xgAddress, OUTPUT);
	nrf_gpio_pin_set(_xgAddress); // digitalWrite(_xgAddress, HIGH);
	nrf_gpio_cfg_output(_mAddress); // pinMode(_mAddress, OUTPUT);
	nrf_gpio_pin_set(_mAddress); // digitalWrite(_mAddress, HIGH);
	
	/*
	SPI.begin();
	// Maximum SPI frequency is 10MHz, could divide by 2 here:
	SPI.setClockDivider(SPI_CLOCK_DIV2);
	// Data is read and written MSb first.
	SPI.setBitOrder(MSBFIRST);
	// Data is captured on rising edge of clock (CPHA = 0)
	// Base value of the clock is HIGH (CPOL = 1)
	SPI.setDataMode(SPI_MODE0);
	*/
}

void SPIwriteByte(uint8_t csPin, uint8_t subAddress, uint8_t data)
{
	nrf_gpio_pin_clear(csPin); // digitalWrite(csPin, LOW); // Initiate communication
	
	// If write, bit 0 (MSB) should be 0
	// If single write, bit 1 should be 0
	SPItransfer(subAddress & 0x3F);
	SPItransfer(data);
	nrf_gpio_pin_set(csPin); // digitalWrite(csPin, HIGH); // Close communication
}

void SPIreadBytes(uint8_t csPin, uint8_t subAddress,
							uint8_t * dest, uint8_t count)
{

	// To indicate a read, set bit 0 (msb) of first byte to 1
	uint8_t rAddress = 0x80 | (subAddress & 0x3F);
	// Mag SPI port is different. If we're reading multiple bytes, 
	// set bit 1 to 1. The remaining six bytes are the address to be read
	if ((csPin == _mAddress) && count > 1)
		rAddress |= 0x40;
	
	nrf_gpio_pin_clear(csPin); // digitalWrite(csPin, LOW); // Initiate communication
	SPItransfer(rAddress);	// SPI.transfer(rAddress);
	for (int i=0; i<count; i++)
	{
		dest[i] = SPItransfer(0x00); // SPI.transfer(0x00); // Read into destination array
	}
	nrf_gpio_pin_set(csPin); // digitalWrite(csPin, HIGH); // Close communication
}
